CHANGES
=======

1.26.1 (unreleased)
-------------------

- Added automagic conflict resolution for MOVE (#12139)


1.26.0 (2012-12-17)
-------------------

- Include new required properties in the test content fixture.
- Silence the mock connector 'searching...' messages.


1.25.1 (2012-03-06)
-------------------

- Added random value to mock connector's etag generator as subsequent calls to
  ``time.time()`` may the same value.

(NOTE: This version should have bevome 1.24.1. But once released we are not
retracting).


1.24.0 (2012-03-01)
-------------------

- Update mock fixture: DailyNL has moved to the 'document' namespace (#10056).

- Fix connector.txt test which (probably) broker after the last DAV server
  update (#10337)

- Fix search test which expected a result from the server which is not strictly
  necessary (#10339).

- Removed flaky threading test which was not actually useful because of a
  different database behaviour in test vs. production (#10352)


1.23.1 (2012-01-18)
-------------------

- Fix unicode error in search by encoding unicode to utf8.


1.23.0 (2011-11-13)
-------------------

- Fix decoding of URLs in DAVResponse when there is raw UTF8 in the xml
  (instead of fully url encoded).
- Corrected Logging of query-server queries (#8308)
- Pass lock-token for MOVE (#8980).
- Fix query server integration: The API implemented ``range()`` while it must
  read ``between()``.
- Raise exception in connector when query server returns an error.
- Allow to store strucured (XML) values in properties (#9899)


1.22.2 (2010-08-30)
-------------------

- Connector invalidation event subscriber doesn't raise ValueError any longer
  for UniqueIds the connector isn't responsible for (#7933)


1.22.1 (2010-08-17)
-------------------

- Fixed cache invalidation for collections with non-collection ids (#7906).


1.22.0 (2010-08-16)
-------------------

- When the cache is invalidated it only causes write request when there